Added some HTML and CSS styling

--- a/code/src/index.html
+++ b/code/src/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- No JavaScript so don't need to Import -->
+    <div class="container">
+      <div class="container-form">
+        <div class="left">Welcome to Orange Pink!</div>
+        <div class="right">Already have an account?</div>
+      </div>
+    </div>
   </body>
 </html>
