--- a/code/src/index.html
+++ b/code/src/index.html
@@ -10,9 +10,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="container-form">
-        <div class="left">Welcome to Orange Pink!</div>
-        <div class="right">Already have an account?</div>
+      <div class="left">
+        <img src="" alt="icon" srcset="" />
+        <h1>Welcome to Orange Pink!</h1>
+        <p>
+          We are here to help take care of your beauty, join us for this moment
+          in time to realize your true potential!
+        </p>
+      </div>
+      <div class="right">
+        <div class="header">
+          <p>Already have an account?</p>
+          <p>Sign In</p>
+        </div>
       </div>
     </div>
   </body>
