Added more CSS Styling and code for HTML

--- a/code/src/index.html
+++ b/code/src/index.html
@@ -11,17 +11,35 @@
   <body>
     <div class="container">
       <div class="left">
-        <img src="" alt="icon" srcset="" />
-        <h1>Welcome to Orange Pink!</h1>
+        <header>
+          <img src="" alt="icon" srcset="" />
+          <h1>Welcome to Orange Pink!</h1>
+        </header>
         <p>
           We are here to help take care of your beauty, join us for this moment
           in time to realize your true potential!
         </p>
+        <!-- Image Carousel -->
       </div>
       <div class="right">
         <div class="header">
           <p>Already have an account?</p>
           <p>Sign In</p>
+
+          <form action="" method="get" class="login-form">
+            <div class="login-name">
+              <label for="name">Name</label>
+              <input type="text" name="name" id="name" required />
+            </div>
+            <div class="login-password">
+              <label for="password">Password</label>
+              <input type="text" name="name" id="name" required />
+            </div>
+            <h3>Forgot your Password?</h3>
+
+            <button>Sign Up</button>
+            <p>Or sign up with</p>
+          </form>
         </div>
       </div>
     </div>
