Fixing positioning for CSS Styling

--- a/code/src/index.html
+++ b/code/src/index.html
@@ -23,24 +23,27 @@
       </div>
       <div class="right">
         <div class="header">
-          <p>Already have an account?</p>
-          <p>Sign In</p>
-
-          <form action="" method="get" class="login-form">
-            <div class="login-name">
-              <label for="name">Name</label>
-              <input type="text" name="name" id="name" required />
-            </div>
-            <div class="login-password">
-              <label for="password">Password</label>
-              <input type="text" name="name" id="name" required />
-            </div>
-            <h3>Forgot your Password?</h3>
-
-            <button>Sign Up</button>
-            <p>Or sign up with</p>
-          </form>
+          <div class="left-side">
+            <p>Already have an account?</p>
+          </div>
+          <div class="right-side">
+            <p>Sign In</p>
+          </div>
         </div>
+        <form action="" method="get" class="login-form">
+          <div class="login-name">
+            <label for="name">Name</label>
+            <input type="text" name="name" id="name" required />
+          </div>
+          <div class="login-password">
+            <label for="password">Password</label>
+            <input type="text" name="name" id="name" required />
+          </div>
+          <h3>Forgot your Password?</h3>
+
+          <button>Sign Up</button>
+          <p>Or sign up with</p>
+        </form>
       </div>
     </div>
   </body>
