--- a/code/src/index.html
+++ b/code/src/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="left">
         <header>
-          <img src="" alt="icon" srcset="" />
+          <img src="../assets/shopping-icon.webp" alt="icon" srcset="" />
           <h1>Welcome to Orange Pink!</h1>
         </header>
         <p>
@@ -20,6 +20,10 @@
           in time to realize your true potential!
         </p>
         <!-- Image Carousel -->
+        <img src="../assets/mountain.png" alt="image" srcset="" />
+        <img src="../assets/mountain.png" alt="image" srcset="" />
+        <img src="../assets/mountain.png" alt="image" srcset="" />
+        <img src="../assets/mountain.png" alt="image" srcset="" />
       </div>
       <div class="right">
         <div class="header">
