CSS Styling modifications

--- a/code/src/index.html
+++ b/code/src/index.html
@@ -13,17 +13,25 @@
       <div class="left">
         <header>
           <img src="../assets/shopping-icon.webp" alt="icon" srcset="" />
-          <h1>Welcome to Orange Pink!</h1>
+          <h1>Welcome to Society!</h1>
         </header>
         <p>
-          We are here to help take care of your beauty, join us for this moment
-          in time to realize your true potential!
+          We are here to help take care of you, join us for this moment in time
+          and realize your true potential.
         </p>
         <!-- Image Carousel -->
-        <img src="../assets/mountain.png" alt="image" srcset="" />
-        <img src="../assets/mountain.png" alt="image" srcset="" />
-        <img src="../assets/mountain.png" alt="image" srcset="" />
-        <img src="../assets/mountain.png" alt="image" srcset="" />
+        <div class="carousel">
+          <img src="../assets/mountain.png" alt="image" srcset="" />
+          <img src="../assets/mountain.png" alt="image" srcset="" />
+          <img src="../assets/mountain.png" alt="image" srcset="" />
+          <img src="../assets/mountain.png" alt="image" srcset="" />
+        </div>
+        <!-- Carousel Slider -->
+        <div class="slider">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
       </div>
       <div class="right">
         <div class="header">
