Fixed some HTML and added additional CSS Styling fixes

--- a/code/src/index.html
+++ b/code/src/index.html
@@ -42,6 +42,7 @@
             <p>Sign In</p>
           </div>
         </div>
+        <!-- Form -->
         <form action="" method="get" class="login-form">
           <div class="login-name">
             <label for="name">Name</label>
