Fixed CSS Formatting with Height, Width, and Size adjustments, added socials and assets, overall finished build

--- a/code/src/index.html
+++ b/code/src/index.html
@@ -56,6 +56,29 @@
 
           <button>Sign Up</button>
           <p>Or sign up with</p>
+          <!-- Google -->
+          <div class="socials">
+            <img
+              src="../assets/google-icon.png"
+              alt="google"
+              srcset=""
+              class="google"
+            />
+            <!-- Apple -->
+            <img
+              src="../assets/apple-icon.png"
+              alt="apple"
+              srcset=""
+              class="apple"
+            />
+            <!-- Facebook/Meta -->
+            <img
+              src="../assets/facebook-icon.png"
+              alt="facebook"
+              srcset=""
+              class="facebook"
+            />
+          </div>
         </form>
       </div>
     </div>
